main.css
html {
  /*scroll-behavior: smooth;*/
}

#menu {
    position: fixed;
    top: 0px;
    background-color: white;   
    width: calc(100% - 96px);
    margin: 0px 48px 40px 48px; 
}

#footer {
    width: calc(100% - 96px);
    margin: 40px 48px 40px 48px;
    border-top: solid 1px #000000;
}


a:hover{
    opacity: 0.6;
}

div {
    margin-top: 24px;
}

body {
    margin: auto 0;
    display: block;
}

a {
    text-decoration: none;
    color: #000000;  
}


img {
    width: 100%;
    margin-bottom: 80px;
}

.window {
    display: block;
    margin-left: 48px;
    margin-right: 48px;
    margin-top: 56px;
    margin-bottom: 24px;
    padding-top: 48px;
}

.container {
    width: inherit;
    display: flex;
    flex-wrap: wrap;
    /*background-color:darkseagreen;*/
    padding: 48px 0px 48px 0px;
}

.full-width {
    width: 100%;
    display: block;
}

.half-width {
    width: calc(50% - 12px);
    display: inline-block;
}

.col8-width {
    /*width: 66%;*/
    width: calc(66.7% - 3px);
    display: inline-block;
}

.project-box {
    width: 66%;
    /*width: calc(66.7% - 3px);*/
    /*background-color: skyblue;*/
    margin-left: auto;
    margin-right: 0;
}


.project-row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    margin-bottom: 48px;  
}


.project-column {
    display: flex;
    flex-direction: column;
    flex-basis: 100%;
    /*flex: 1;*/
    /*background-color: aqua;*/
    padding-right: 12.5%
}

/* Only mobile */
@media screen and (max-width: 720px) {
    
    .col8-width {
        width: 100%;
        display: inline-block;
    }
    
    .half-width {
        display: block !important;;
        width: 100% !important;
        
    }
    
    .left {
        margin-right: 0px !important;
    }

    .right {
        margin-left: 0px !important;
    }
    
    .project-box {
        width: 100%;
        background-color: skyblue;
        padding: 0px;
    }
    
    .project-item {
        width: inherit;
        display: block;
        margin-bottom: 40px;
    }
    
    
}

/* Only desktop */
@media screen and (min-width: 800px) {
    .project-column {
        flex: 1
    }
}


.menu-ul {
    padding: 0;
    list-style: none;
}


.menu-list {
    text-align: left;
    display: inline;
    padding: 8px 40px 8px 0px;
    
    /*text style*/
    font-family: Montserrat, sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 1em;
    line-height: 1.5em;
    /* identical to box height, or 150% */

    letter-spacing: 0.25px;

    color: #000000;
}


.logo {
    width: 24px;
    height: 24px;
}

#face {
    width: 20%; 
    align-content: center;
    margin: auto;
}

.p-zero {
    margin: 0px;
}


.project-item-index {
    border-bottom: solid 2px #EB5757;
    margin-right: 8px;
}





.left {
    margin-right: 12px;
    /*background-color: azure;*/
}

.text-vertical-center {
  text-align: left;
  position: relative;
  top: 50%;
  -ms-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
}

.right {
    margin-left: 12px;
    /*background-color: burlywood;*/
    float: right;
    
}

.center {
    /*background-color: palevioletred;*/
    float: center;
    display: block;
    margin: auto;
}

.hero {
    font-family: Montserrat, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 3em; /*48px*/
    line-height: box-height; /*64px*/
    
    color: #000000;
}

.index {
    border-bottom: solid 4px #EB5757;
    margin-right: 16px;
    margin-bottom: 24px;
    color: #000000;
    
    display: inline-flex;
    font-family: Montserrat, sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 3em;
    line-height: 2em;
}


/*
.index {
    border-bottom: solid 4px #EB5757;
    margin-right: 16px;
    color: #000000;
    
    font-family: Montserrat, sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 2.5em;
    line-height: 2em;
}
*/

/* 
.caption {
    font-size: 14px;
    font-weight: 400;
}
*/


.h1 {
    font-family: Montserrat, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 1.5em;
    line-height: 2em;
    
    color: #000000;
}


.h2 {
    font-family: Montserrat, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 1.25em;
    line-height: 1.5em;
    /* identical to box height, or 120% */

    letter-spacing: 0.15px;
    color: #000000;
}


.h3 {
    font-family: Montserrat, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 1em;
    line-height: 1.25em;
    /* identical to box height, or 120% */

    letter-spacing: 0.15px;
    color: #000000;
}

.regular {
    font-weight: 400;
}

.light {
    font-weight: 300;
}

.italic {
    font-style: italic;
}

.compact {
    line-height: 1.25em;
}

.body {
    /*position: absolute;*/
    font-family: Montserrat, sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 1em;
    line-height: 1.5em;
    /* or 150% */
    letter-spacing: 0.25px;

    /* Red */
    color: #000000;
    /*column-count: 1;*/
}

/* Contribution items */

.chip {
    border: 1px solid #000000;
    /*box-sizing: border-box;*/
    border-radius: 4px;
    padding: 4px;
    display: inline-block;
    font-family: Montserrat, sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 0.875em;
    letter-spacing: 0.15px;
    margin: 0px 0px 4px 0px;
    color: #000000;
}



/*
#side {
    position: fixed;
    float: left;
    width: 180px; 
    height: 100%;
    display: block;
}

#header{    
    text-align: center;
    font-family: "Pacifico", cursive;
    font-size: 28px;
    padding-top: 20px;
}

#nav{
    text-align: center;
    padding-top: 20px;
}

.topnav{
    margin-left: 0px;
    padding-left: 30px;
    font-family: "Lato", sans-serif;
    font-weight: 400;
    font-size: .75em;
    letter-spacing: .5px;
    
}


#contents {
    position: absolute;
    float: left;
    display: block;
    width: auto;
    margin-left: 180px;
    margin-right: 15%;
    padding-top: 90px;
    font-family: "Lato", sans-serif;
    z-index: -1;
    justify-content: center;
    
}
*/

